top links to funds and dao

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 									<li><a class="n-link-2" href="javascript:void(0)" value="SwapTb">Swap</a></li>
 									<li><a class="n-link-3" href="javascript:void(0)" value="HouseTb">House</a></li>
 									<li><a class="n-link-4" href="javascript:void(0)" value="GibTb">Gib</a></li>
-									<li><a class="n-link-5" href="javascript:void(0)" value="DaoTb">Dao</a></li>
-									<li><a class="n-link-6" href="javascript:void(0)" value="OneTb">One</a></li>
+									<li><a class="n-link-5" href="javascript:void(0)" value="FundsTb">Funds</a></li>
+									<li><a class="n-link-6" href="javascript:void(0)" value="DaoTb">DAO</a></li>
 									<li><a class="n-link-7" href="javascript:void(0)" value="NftTb">NFT</a></li>
 									<li><a class="n-link-8" href="javascript:void(0)" value="ChainsTb">Chains</a></li>
 									<!-- <li><a class="n-link-12 special_nav Textfadehome" href="javascript:void(0)" value="Team">Team</a>
@@ -473,9 +473,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<h1 class="wow fadeInUp"><span>RoverHouse</span></h1>
 								<h2 class="wow fadeInUp text-white">Maximize Yield</h2>
 								<h3 class="wow fadeInUp text-white">Hunt & Aggregate Yield</h3>
-								<p>ROVER’s vault strategies automate maximum yield using RoverHunt strategies. New
-									hunting strategies are voted into RoverHouse by ROVER token holders, thus
-									incentivizing holding positions and increasing demand for ROVER.</p>
+								<p>DAO led strategies to compound & optimize yield from various DeFi offerings</p>
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
@@ -502,13 +500,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<h1 class="wow fadeInUp"><span>RoverGib</span></h1>
 								<h2 class="wow fadeInUp">Borrow/Lend, Stables, Money Markets</h2>
 								<h3 class="wow fadeInUp">Combine fuse maker mirror synthetix & aave</h3>
-								<p>Rover’s Money Market protocol RoverGib expands the playing field to include borrowing
-									and lending on a myriad of DeFi assets. Like Aave, Maker, and Compound, RoverGib
-									creates markets for various assets. Lenders earn interest on otherwise idle crypto
-									assets, while Borrowers can take out collateralized loans or employ flash loans for
-									various positioning and leveraging strategies. RoverGib also becomes the first
-									pillar in a substack of platforms which facilitates complete integration of assets,
-									commodities, NFTs and more.</p>
+								<p>Rover users will be able to earn any assets from lock & lend of any assets</p>
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
 										data-target="#exampleModal" download value="RoverGibGn">Get
@@ -519,7 +511,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 						</div>
 					</div>
 				</section>
-				<section id="RoverDao"
+				<section id="RoverFunds"
 					class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
 					<div class="container">
 						<div class="row  row-eq-height flex-xs-column-reverse">
@@ -527,11 +519,11 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<h1 class="wow fadeInUp"><span>RoverFunds</span></h1>
 								<h2 class="wow fadeInUp">DeFi & NFT Funds</h2>
 								<h3 class="wow fadeInUp">Influencer & algo decentralized investment funds</h3>
-								<p>Collaboration with Chainlink & CoTrader empowers Rover to offer DeFi Funds with NFT Funds coming shortly. Anyone can create a fund as a trader. Anyone can join it, as a cotrader, without sending their funds to the trader, and withdraw assets any time. For more info, check our partner cotrader.com</p>
+								<p>Collaboration with Chainlink & CoTrader empowers Rover to offer DeFi Funds with NFT Funds coming shortly. Anyone can create a fund as a trader. Anyone can join it, as a cotrader, without sending their funds to the trader, and withdraw assets any time. For more info, check our partner <a href="https://cotrader.com" style="all: none;">cotrader.com</a></p>
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="RoverDaoGn">Get
+										data-target="#exampleModal" download value="RoverFundsGn">Get
 										Notified!</a>
 								</div>
 
@@ -544,7 +536,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 						</div>
 					</div>
 				</section>
-				<section id="RoverOne"
+				<section id="RoverDao"
 					class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
 					<div class="container">
 						<div class="row  row-eq-height">
@@ -556,9 +548,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<h1 class="wow fadeInUp"><span>RoverDao</span></h1>
 								<h2 class="wow fadeInUp">Governance</h2>
 								<h3 class="wow fadeInUp">Govern all the things</h3>
-								<p>ROVER is being created to uphold the principles of DeFi. Holders of the ROVER token
-									thus become part of the decentralized governing organization RoverDao, which makes
-									decisions on behalf of the protocol. </p>
+								<p>RTR holders govern virtually every aspect of the platform</p>
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
@@ -781,8 +771,8 @@ Rover combines the best of platform revenue & tokenomics.</p>
 									<li><a class="n-link-2" href="javascript:void(0)" value="Swap">Swap</a></li>
 									<li><a class="n-link-3" href="javascript:void(0)" value="House">House</a></li>
 									<li><a class="n-link-4" href="javascript:void(0)" value="Gib">Gib</a></li>
-									<li><a class="n-link-5" href="javascript:void(0)" value="Dao">Dao</a></li>
-									<li><a class="n-link-6" href="javascript:void(0)" value="One">One</a></li>
+									<li><a class="n-link-5" href="javascript:void(0)" value="Dao">Funds</a></li>
+									<li><a class="n-link-6" href="javascript:void(0)" value="One">DAO</a></li>
 									<li><a class="n-link-7" href="javascript:void(0)" value="NFT">NFT</a></li>
 									<li><a class="n-link-8" href="javascript:void(0)" value="Chains">Chains</a></li>
 									<!-- <li><a class="n-link-12" href="javascript:void(0)" value="Team">Team</a></li> -->
