bottom section texts

--- a/index.html
+++ b/index.html
@@ -567,11 +567,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<h1 class="wow fadeInUp"><span>NFT Metaverse</span></h1>
 								<h2 class="wow fadeInUp">Create trade explore & play</h2>
 								<h3 class="wow fadeInUp">Community created collections, funds & storefronts</h3>
-								<p>The current explosion of NFTs in the marketplace has created the first real gateway
-									between mainstream everyday people and the heretofore esoteric and somewhat
-									self-enclosed world of decentralized finance. With this comes unprecedented
-									potential for growth in DeFi, as capital floods into the space from new outside
-									sources. RoverNFT creates the bridge which allows users to bring their NFTs </p>
+								<p>Rover creates the bridge between users in DeFi, NFTs and metaverse communites with their own interoperable worlds</p>
 
 
 								<div class="banner-header-button wow fadeInUp">
@@ -601,13 +597,13 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<div class="list_bg">
 									<ul class="wow fadeInUp text-left">
 										<li>Perpetual Swaps</li>
-										<li>Social Network NFTs</li>
-										<li>Games Platform NFTs</li>
+										<li>Social Networks</li>
+										<li>NFT Games Platforms</li>
 										<li>Decentralized fiat on-ramp</li>
 									</ul>
 								</div>
 								
-								<p> Integrated with RoverNFT, RoverChains on L2 provides a superior experience for users with faster transaction times and lower fees, while bringing on-chain and off-chain game items into the DeFi marketplace. This in turn creates a market for DEXs, derivatives, and more, which drives even more capital into this already booming sector of decentralized finance. </p>
+								<p> Integrated with RoverLand - total DeFi & NFT stack -- RoverChains provides a superior experience for users with faster transaction times and lower fees, while bringing on-chain and off-chain game items into the DeFi & NFT marketplace. This in turn creates a market for HFT, derivatives, and more, which drives even more capital from the metaverse</p>
 							  </div>
 
 							</div>
@@ -686,10 +682,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 									<li>Revenue from a total DeFi & NFT stack</li>
 								</ul>
 								<h2 class="wow fadeInUp">Utility</h2>
-								<p>ROVER Token has the combined utility & revenue of all the DeFi & NFT platforms that
-									Rover offers, from its own version and TLV in Uniswap/Pancake, Yearn, Aave,
-									Synthetix, Mirror, Maker, to its own upcoming L2 DEX, derivatives & games, as Rover
-									bridges DeFi & NFTs</p>
+								<p>RTR combines rovlection tokenomics with revenue from RoverLand -- a total DeFi & NFT stack. Rovflection adds liqudity to DEX & awards RTR to every holder, at every transaction, as explained in supply. Value = Tokenomics * Platform, and Rover is combining the best of both, for quadratic value</p>
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
