--- a/index.html
+++ b/index.html
@@ -272,12 +272,13 @@
 				<div id="innovation-stack">
 					<div class="container">
 						<div class="row justify-content-center">
-							<div class="col-12">
-								<div class="section-subtitle wow fadeInUp text-center">Innovation Stack</div>
+
+							<!-- <div class="col-12">
+								<div class="section-subtitle wow fadeInUp text-center">RoverLand Metaverse</div>
 							</div>
 							<div class="col-lg-4 col-md-5">
 								<div class="wow fadeInRight">
-									<p class="text-center text-white">Rover is a DeFi & NFT metaverse complete with markets, funds & games platform with community created worlds & chains in a decentralized metaverse.
+									<p class="text-center text-white">RoverLand is a DeFi & NFT metaverse innovation stake, complete with markets, funds & games platform with community created worlds & chains.
 Rover tokenomics offers reflection (token rewards per transaction) and staking with auto compounding hodl APY rewards and no impermanent loss.
 Rover combines the best of platform revenue & tokenomics.</p>
 
@@ -288,9 +289,8 @@ Rover combines the best of platform revenue & tokenomics.</p>
 										data-target="#exampleModal" value="StackGn" download>Get
 										Notified!</a>
 								</div>
+							</div> -->
 
-
-							</div>
 							<div class="col-12">
 								<div class="wow fadeInLeft">
 									<h2 class="text-center text-white">Built with the Best in Industry</h2>
@@ -332,6 +332,34 @@ Rover combines the best of platform revenue & tokenomics.</p>
 			</div>
 
 
+
+			<section id="RoverGib"
+			class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
+			<div class="container">
+				<div class="row  row-eq-height">
+					<div class="col-md-6 align-self-center text-center">
+						<img src="images/roverland.jpg" alt=""
+							class="wow fadeInLeft" />
+					</div>
+					<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
+						<h1 class="wow fadeInUp"><span>RoverLand Metaverse</span></h1>
+						<h2 class="wow fadeInUp">Total DeFi & NFT Innovation Stack</h2>
+						<h3 class="wow fadeInUp">Bridge DeFi & NFT markets and the metaverse</h3>
+						<p>RoverLand is a DeFi & NFT metaverse innovation stake, complete with markets, funds & games platform with community created worlds & chains.
+							Rover tokenomics offers reflection (token rewards per transaction) and staking with auto compounding hodl APY rewards and no impermanent loss.
+							Rover combines the best of platform revenue & tokenomics.</p>
+						<div class="banner-header-button wow fadeInUp">
+							<a class="button" href="javascript:void(0)" data-toggle="modal"
+								data-target="#exampleModal" download value="RoverGibGn">Get
+								Notified!</a>
+						</div>
+					</div>
+
+				</div>
+			</div>
+			</section>
+
+		
 
 			<div class="dog-section">
 
