--- a/index.html
+++ b/index.html
@@ -619,8 +619,8 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<img src="images/ChainDog-1.png" alt="" class="left-right-image wow fadeInLeft" >
 							</div>
 							<div class="col-md-6 align-self-center text-left wow fadeInUp mt-md-0 mt-5">
-								<h1 class="wow fadeInUp"><span>RoverChains</span></h1>
-								<h2 class="wow fadeInUp">L2, L1 EVM</h2>
+								<h1 class="wow fadeInUp"><span>RoverChain</span></h1>
+								<h2 class="wow fadeInUp">EVM</h2>
 								<h3 class="wow fadeInUp">Energy Efficient & High Frequency</h3>
 								<div class="list_bg">
 									<ul class="wow fadeInUp text-left">
@@ -629,8 +629,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 										<li>NFT Games Platforms</li>
 										<li>Decentralized fiat on-ramp</li>
 									</ul>
-								</div>
-								
+								</div>								
 								<p> Integrated with RoverLand - total DeFi & NFT stack -- RoverChains provides a superior experience for users with faster transaction times and lower fees, while bringing on-chain and off-chain game items into the DeFi & NFT marketplace. This in turn creates a market for HFT, derivatives, and more, which drives even more capital from the metaverse</p>
 							  </div>
 
