--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 							</div>
 							<div class="col-md-6 align-self-center text-left wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>RoverChain</span></h1>
-								<h2 class="wow fadeInUp">EVM</h2>
+								<h2 class="wow fadeInUp">ZK Rollups Powered EVM</h2>
 								<h3 class="wow fadeInUp">Energy Efficient & High Frequency</h3>
 								<div class="list_bg">
 									<ul class="wow fadeInUp text-left">
