--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
 						<div class="nav-wrap">
 							<nav id="nav-main" class="nav-full">
 								<ul>
+									<li><a class="n-link-0" href="javascript:void(0)" value="MetaverseTb">Metaverse</a></li>
 									<li><a class="n-link-1" href="javascript:void(0)" value="FetchTb">Fetch</a></li>
-									<li><a class="n-link-2" href="javascript:void(0)" value="SwapTb">Swap</a></li>
+									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunchTb">Fair Launch</a></li>
 									<li><a class="n-link-3" href="javascript:void(0)" value="HouseTb">House</a></li>
 									<li><a class="n-link-4" href="javascript:void(0)" value="GibTb">Gib</a></li>
 									<li><a class="n-link-5" href="javascript:void(0)" value="FundsTb">Funds</a></li>
@@ -333,7 +334,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 
 
 
-			<section id="RoverGib"
+			<section id="Metaverse"
 			class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
 			<div class="container">
 				<div class="row  row-eq-height">
@@ -467,19 +468,13 @@ Rover combines the best of platform revenue & tokenomics.</p>
 									<img src="images/Johnny.png" alt="" class=" wow fadeInLeft" />
 								</div>
 								<div class="col-md-6 align-self-center text-white wow fadeInUp mt-md-0 mt-5">
-									<h1 class="wow fadeInUp"><span>RoverLand Metaverse</span></h1>
-									<h3 class="wow fadeInUp">DeFi suite</h3>
-									<p class="wow fadeInUp">Funds, DEX, stables, lending, money markets, yield aggregation</p>
-									<h3 class="wow fadeInUp">NFT suite</h3>
-									<p class="wow fadeInUp">Community created collections, markets, & games platform</p>
-									<!-- <h3 class="wow fadeInUp">No Impermanent Loss</h3>
-									<p class="wow fadeInUp">Insurance tokens</p>
-									<h3 class="wow fadeInUp">DEX aggregator</h3>
-									<p class="wow fadeInUp">Extend beyong 1inch and paraswap to use 1-direction pools</p> -->
-									<!-- <h3 class="wow fadeInUp">Single-Direction Pools</h3>
-									<p class="wow fadeInUp">Pools for e.g. large holders to remove project risk while earning steadily</p> -->
-									<h3 class="wow fadeInUp">Partners program</h3>
-									<p class="wow fadeInUp">Contribute to or use the metaverse stack for revenue or a fee</p>
+									<h1 class="wow fadeInUp"><span>Fair Launch</span></h1>
+									<h3 class="wow fadeInUp">Earn from Every Transaction</h3>
+									<p class="wow fadeInUp">Rover's Rovflection tokenomics pays 5% to every holder and DEX Liquidity Depth (LD) from a 10% fee for every transaction</p>
+									<h3 class="wow fadeInUp">Less Slippage & Faster Liquidty Growth</h3>
+									<p class="wow fadeInUp">Buying RTR from Fetch reduces slippage while growing DEX LD 5x faster, via Rover's novel DEX/LGE split, while funding treasury</p>
+									<h3 class="wow fadeInUp">Liquidity Mining without Impermanent Loss</h3>
+									<p class="wow fadeInUp">With each buy via Fetch, DEX LD grows without needing to staking in pools, where Impermanent Loss can eat away from massive gains</p>
 
 									<div class="banner-header-button wow fadeInUp">
 										<a class="button" href="javascript:void(0)" data-toggle="modal"
@@ -787,8 +782,9 @@ Rover combines the best of platform revenue & tokenomics.</p>
 							</div>
 							<div class="footer-menu">
 								<ul class="footer-menu-list wow fadeInUp">
+									<li><a class="n-link-0" href="javascript:void(0)" value="Metaverse">Metaverse</a></li>
 									<li><a class="n-link-1" href="javascript:void(0)" value="Fetch">Fetch</a></li>
-									<li><a class="n-link-2" href="javascript:void(0)" value="Swap">Swap</a></li>
+									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunch">Fair Launch</a></li>
 									<li><a class="n-link-3" href="javascript:void(0)" value="House">House</a></li>
 									<li><a class="n-link-4" href="javascript:void(0)" value="Gib">Gib</a></li>
 									<li><a class="n-link-5" href="javascript:void(0)" value="Dao">Funds</a></li>
@@ -807,7 +803,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 							<ul class="footer-social wow fadeInUp">
 								<li><a href="https://t.me/RoverDAOcom" target="_blank" value="FooterTgNews"
 									title="Telegram"><i class="fab fa-telegram-plane"></i></a></li>
-								<li><a href="https://twitter.com/Rover?s=21" target="_blank" value="FooterTwitter"
+								<li><a href="https://twitter.com/RoverDAO?s=21" target="_blank" value="FooterTwitter"
 									title="Twitter"><i class="fab fa-twitter"></i></a>
 								</li>
 								<li><a href="https://discord.gg/2vChyYXsHm" target="_blank" value="FooterDiscord"
