--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 								<ul class="banner-social">
 									<li><a href="https://t.me/RoverDAOcom" target="_blank" value="StbTgNews"
 										title="Telegram"><i class="fab fa-telegram-plane"></i></a></li>
-									<li><a href="https://twitter.com/RoverDAO" target="_blank" value="StbTw"
+									<li><a href="https://twitter.com/RoverDAOcom" target="_blank" value="StbTw"
 										title="Twitter"><i class="fab fa-twitter"></i></a>
 									</li>
 									<li><a href="https://discord.gg/2vChyYXsHm" target="_blank" value="StbDiscord"
@@ -803,7 +803,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 							<ul class="footer-social wow fadeInUp">
 								<li><a href="https://t.me/RoverDAOcom" target="_blank" value="FooterTgNews"
 									title="Telegram"><i class="fab fa-telegram-plane"></i></a></li>
-								<li><a href="https://twitter.com/RoverDAO?s=21" target="_blank" value="FooterTwitter"
+								<li><a href="https://twitter.com/RoverDAOcom" target="_blank" value="FooterTwitter"
 									title="Twitter"><i class="fab fa-twitter"></i></a>
 								</li>
 								<li><a href="https://discord.gg/2vChyYXsHm" target="_blank" value="FooterDiscord"
@@ -864,7 +864,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 						<h3>Follow Us</h3>
 						<ul class="modal-ul">
 							<br>
-							<li class="modal-p"><a href="https://twitter.com/RoverDAOcom?s=21" target="_blank"
+							<li class="modal-p"><a href="https://twitter.com/RoverDAOcom" target="_blank"
 									value="Follow us Twitter">Twitter</a>
 							</li>
 							<br>
