Jan 18 clock, discord link fixed

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 									<li><a href="https://twitter.com/RoverDAOcom" target="_blank" value="StbTw"
 										title="Twitter"><i class="fab fa-twitter"></i></a>
 									</li>
-									<li><a href="https://discord.gg/2vChyYXsHm" target="_blank" value="StbDiscord"
+									<li><a href="https://discord.com/invite/T5CmEjdh" target="_blank" value="StbDiscord"
 										title="Discord"><i class="fab fa-discord"></i></a>
 									</li>
 									<li><a href="https://www.reddit.com/r/RoverCapital" target="_blank" value="StbReddit"
@@ -174,10 +174,11 @@
 														</h2>
 														<h2 id="inOneClick" class="text-white font-lg2 wow fadeInUp" style="line-height: 1;">
 															Simpli<span class="Textfadehome" >fied</span> in One <span class="Textfadehome">Click</span></h2>
-
+														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1;">Jan 18, Fair Launch, $18K MC!</div>
+														<br>
 													</div>
  
-													<!-- <div id="clock" class="newclasclock-builder-output">
+													<div id="clock" class="newclasclock-builder-output">
 														<div class="clock-builder-output">														
 															<script type="text/javascript"
 																src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -217,13 +218,13 @@
 																		play: 'play',
 																		wrapper: 'flip-clock-small-wrapper'
 																	};
-																	var countdown = 1617210000 - ((new Date().getTime()) / 1000); // from: 03/22/2021 10:00 am -0700
+																	var countdown = 1642514400 - ((new Date().getTime()) / 1000); // from: 03/22/2021 10:00 am -0700
 																	countdown = Math.max(1, countdown);
 																	$('.clock-builder-output').FlipClock(countdown, opts);
 																});
 															</script>
 														</div>
-													</div> -->
+													</div>
 													
 													<div class="banner-header-button wow fadeInUp buttonresonsive">
 															<a class="button" href="javascript:void(0)" data-toggle="modal"
@@ -379,7 +380,6 @@ Rover combines the best of platform revenue & tokenomics.</p>
 									</div>
 										<div class="section-title wow fadeInUp">One Click Easy</div>
 									<p class="wow fadeInUp">Send BNB & get RTR at minimal slippage, split from LGE & DEX</p>
-
 									<!-- <a class="button wow fadeInUp" target="_blank" href=" " title="$TRDL ETF">Fetch!
 									</a> -->
 								</div>
@@ -806,7 +806,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<li><a href="https://twitter.com/RoverDAOcom" target="_blank" value="FooterTwitter"
 									title="Twitter"><i class="fab fa-twitter"></i></a>
 								</li>
-								<li><a href="https://discord.gg/2vChyYXsHm" target="_blank" value="FooterDiscord"
+								<li><a href="https://discord.com/invite/T5CmEjdh" target="_blank" value="FooterDiscord"
 									title="Discord"><i class="fab fa-discord"></i></a>
 								</li>
 								<li><a href="https://rovercapital.medium.com/" target="_blank" value="FooterMedium"
@@ -868,7 +868,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 									value="Follow us Twitter">Twitter</a>
 							</li>
 							<br>
-							<li class="modal-p"><a href="https://discord.gg/6nBWStqk" target="_blank"
+							<li class="modal-p"><a href="https://discord.com/invite/T5CmEjdh" target="_blank"
 								value="TgChat">Discord</a>
 							</li>
 							<br>
