--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 						<h1 class="wow fadeInUp"><span>RoverLand Metaverse</span></h1>
 						<h2 class="wow fadeInUp">Total DeFi & NFT Innovation Stack</h2>
 						<h3 class="wow fadeInUp">Bridge DeFi & NFT markets and the metaverse</h3>
-						<p>RoverLand is a DeFi & NFT metaverse innovation stake, complete with markets, funds & games platform with community created worlds & chains.
+						<p>RoverLand is a DeFi & NFT metaverse innovation stack, complete with markets, funds & games platforms for community created worlds & chains.
 							Rover tokenomics offers reflection (token rewards per transaction) and staking with auto compounding hodl APY rewards and no impermanent loss.
 							Rover combines the best of platform revenue & tokenomics.</p>
 						<div class="banner-header-button wow fadeInUp">
