--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<ul>
 									<li><a class="n-link-0" href="javascript:void(0)" value="MetaverseTb">Metaverse</a></li>
 									<li><a class="n-link-1" href="javascript:void(0)" value="FetchTb">Fetch</a></li>
-									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunchTb">Fair Launch</a></li>
+									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunchTb">ROVCO Fair Launch</a></li>
 									<li><a class="n-link-3" href="javascript:void(0)" value="HouseTb">House</a></li>
 									<li><a class="n-link-4" href="javascript:void(0)" value="GibTb">Gib</a></li>
 									<li><a class="n-link-5" href="javascript:void(0)" value="FundsTb">Funds</a></li>
@@ -163,18 +163,21 @@
 											<div class="banner-header text-center ">
 												<div class="banner-header-title">
 													<div class="banner-main-top">
-														<h1 id="allDefi" class="text-white font-lg wow fadeInUp backInUp" style="line-height: 1;"
+														<h1 id="allDefi" class="text-white font-lg wow fadeInUp backInUp" style="line-height: 0.9;"
 															data-wow-duration="2s">DeFi & NFT<br>Metaverse</h1>
 															<!-- data-wow-duration="2s">All DeFi<br>& NFT Earnings + Reflection</h1> -->
 
-														<h2 id="inOneCoin" class="text-white font-lg2  wow fadeInUp for-leter-space" style="line-height: 1;"
+														<h2 id="inOneCoin" class="text-white font-lg2  wow fadeInUp for-leter-space" style="line-height: 0.7;"
 															data-wow-duration="2s">
 															Uni<span class="Textfadehome fied">fied</span> in One
 															<span class="Textfadehome coinn">Coin</span>
 														</h2>
-														<h2 id="inOneClick" class="text-white font-lg2 wow fadeInUp" style="line-height: 1;">
+														<h2 id="inOneClick" class="text-white font-lg2 wow fadeInUp" style="line-height: 0.7;">
 															Simpli<span class="Textfadehome" >fied</span> in One <span class="Textfadehome">Click</span></h2>
-														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Jan 18 Fair Launch $18K MC!</div>
+														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 30px">Jan 18 Fair Launch $18K MC!</div>
+														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Bonus for early buys on days 1-4:</div>
+														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">100% 75% 50% 25%</div>
+														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 18px">Bonus given on month 4</div>
 														<br>
 													</div>
  
@@ -235,7 +238,8 @@
 													<div class="h5" style="color:white;">
 													RTR - Rover Tx Rewards every tx:<br>
 													5% goes to every holder wallet<br>
-													10% to rug-proof ownerless pool<br>
+													5% to rug-proof ownerless pool<br>
+													+5x liquidity growth with ROVCO<br>
 													Revenue from DeFi & NFT suite<br>
 													Stake without impermanent loss<br>												
 													Auto-compounding hodl APY<br>
@@ -417,7 +421,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 
 
 											<div class="section-title wow fadeInUp">Ownerless Pool Liquidity</div>
-											<p class="wow fadeInUp">10% of every transaction adds to rug-proof pool</p>
+											<p class="wow fadeInUp">5% of every transaction adds to rug-proof pool</p>
 
 
 											<div class="section-title wow fadeInUp">Stake + No Impermanent Loss</div>
@@ -468,7 +472,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 									<img src="images/Johnny.png" alt="" class=" wow fadeInLeft" />
 								</div>
 								<div class="col-md-6 align-self-center text-white wow fadeInUp mt-md-0 mt-5">
-									<h1 class="wow fadeInUp"><span>Fair Launch</span></h1>
+									<h1 class="wow fadeInUp"><span>ROVCO - Revenue Generating Fair Launch</span></h1>
 									<h3 class="wow fadeInUp">Earn from Every Transaction</h3>
 									<p class="wow fadeInUp">Rover's Rovflection tokenomics pays 5% to every holder and DEX Liquidity Depth (LD) from a 10% fee for every transaction</p>
 									<h3 class="wow fadeInUp">Less Slippage & Faster Liquidty Growth</h3>
@@ -699,7 +703,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<ul class="wow fadeInUp text-white  text-left">
 									<li>1Q - 50% burned</li>
 									<li>5% of each tx goes to every holder wallet</li>
-									<li>10% of each tx adds to rug-proof ownerless pool liquidity</li>
+									<li>5% of each tx adds to rug-proof ownerless pool liquidity</li>
 									<li>No team wallets, renounced ownership</li>
 									<li>Revenue from a total DeFi & NFT stack</li>
 								</ul>
@@ -784,7 +788,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<ul class="footer-menu-list wow fadeInUp">
 									<li><a class="n-link-0" href="javascript:void(0)" value="Metaverse">Metaverse</a></li>
 									<li><a class="n-link-1" href="javascript:void(0)" value="Fetch">Fetch</a></li>
-									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunch">Fair Launch</a></li>
+									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunch">ROVCO Fair Launch</a></li>
 									<li><a class="n-link-3" href="javascript:void(0)" value="House">House</a></li>
 									<li><a class="n-link-4" href="javascript:void(0)" value="Gib">Gib</a></li>
 									<li><a class="n-link-5" href="javascript:void(0)" value="Dao">Funds</a></li>
