medium link roverdao

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 									<li><a href="https://www.reddit.com/r/RoverCapital" target="_blank" value="StbReddit"
 										title="Reddit"><i class="fab fa-reddit"></i></a>
 									</li>
-									<li><a href="https://rovercapital.medium.com/" target="_blank" value="StbMedium"
+									<li><a href="https://roverdao.medium.com/" target="_blank" value="StbMedium"
 										title="Medium"><i class="fab fa-medium-m"></i></a>
 									</li>
 									<li><a href="https://www.instagram.com/roverDAOcom/" target="_blank"
@@ -180,7 +180,7 @@
 														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 15px">Bonus given on month 4</div>
 														<br>
 													</div>
- 
+u 
 													<div id="clock" class="newclasclock-builder-output">
 														<div class="clock-builder-output">														
 															<script type="text/javascript"
@@ -813,7 +813,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<li><a href="https://discord.com/invite/T5CmEjdh" target="_blank" value="FooterDiscord"
 									title="Discord"><i class="fab fa-discord"></i></a>
 								</li>
-								<li><a href="https://rovercapital.medium.com/" target="_blank" value="FooterMedium"
+								<li><a href="https://roverdao.medium.com/" target="_blank" value="FooterMedium"
 									title="Medium"><i class="fab fa-medium-m"></i></a>
 								</li>
 								<li><a href="https://www.reddit.com/r/RoverCapital" target="_blank" value="FooterMedium"
