--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
 									<li><a class="n-link-8" href="javascript:void(0)" value="ChainsTb">Chains</a></li>
 									<!-- <li><a class="n-link-12 special_nav Textfadehome" href="javascript:void(0)" value="Team">Team</a>
 									</li> -->
-									<li><a class=" Textfadehome n-link-9 special_nav" href="javascript:void(0)"
-											value="Token">Token</a></li>
+									<li><a class=" Textfadehome n-link-9 special_nav" href="javascript:void(0)" value="Token">Token</a></li>
+									<li><a class="n-link-13" href="javascript:void(0)" value="Airdrop">Airdrop</a></li>
+
 									<!-- <li><a class="n-link-10 special_nav Textfadehome" href="javascript:void(0)" value="LmTb">LM</a>
 									</li>
 									<li><a class="n-link-11 special_nav Textfadehome" href="javascript:void(0)" value="LgeTb">LGE</a>
@@ -356,7 +357,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 							Rover combines the best of platform revenue & tokenomics.</p>
 						<div class="banner-header-button wow fadeInUp">
 							<a class="button" href="javascript:void(0)" data-toggle="modal"
-								data-target="#exampleModal" download value="RoverGibGn">Get
+								data-target="#exampleModal" download value="RoverMetaverseGn">Get
 								Notified!</a>
 						</div>
 					</div>
@@ -724,6 +725,33 @@ Rover combines the best of platform revenue & tokenomics.</p>
 					</div>
 				</section>
 
+				<section id="RoverAirdrop"
+					class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
+					<div class="container">
+						<div class="row  row-eq-height">
+							<div class="col-md-6 align-self-center text-center">
+								<img src="images/Grogu-2.png" alt=""
+									class="  rovergib-left-right-image wow fadeInLeft" />
+							</div>
+							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
+								<h1 class="wow fadeInUp"><span>Airdrop & Bounty</span></h1>
+								<h2 class="wow fadeInUp">Bonus: 2x Tokens</h2>
+								<p>Get bonus for buys on days 1-4: 100% 75% 50% 25%</p>
+								<h2 class="wow fadeInUp">Bounty</h2>
+								<p>Earn $10 + $10 per referral via our SweepWidget (link coming soon)</p>
+								<h2 class="wow fadeInUp">Airdrop</h2>
+								<p>Use our platform dapps such as our funds platform
+								<div class="banner-header-button wow fadeInUp">
+									<a class="button" href="javascript:void(0)" data-toggle="modal"
+										data-target="#exampleModal" download value="RoverBountyGn">Get
+										Notified!</a>
+								</div>
+							</div>
+
+						</div>
+					</div>
+				</section>
+				
 				<!-- <section id="LM"
 					class="content-banner-wrap lm-content-banner-wrap content-banner-box-shadow animate">
 					<div class="container">
@@ -797,6 +825,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 									<li><a class="n-link-8" href="javascript:void(0)" value="Chains">Chains</a></li>
 									<!-- <li><a class="n-link-12" href="javascript:void(0)" value="Team">Team</a></li> -->
 									<li><a class="n-link-9" href="javascript:void(0)" value="Token">Token</a></li>
+									<li><a class="n-link-13" href="javascript:void(0)" value="Airdrop">Airdrop</a></li>
 									<!-- <li><a class="n-link-10" href="javascript:void(0)" value="LM">LM</a></li>
 									<li><a class="n-link-11" href="javascript:void(0)" value="LGE">LGE</a></li> -->
 								</ul>
