--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 									<li><a class="n-link-8" href="javascript:void(0)" value="ChainsTb">Chains</a></li>
 									<!-- <li><a class="n-link-12 special_nav Textfadehome" href="javascript:void(0)" value="Team">Team</a>
 									</li> -->
-									<li><a class=" Textfadehome n-link-9 special_nav" href="javascript:void(0)" value="Token">Token</a></li>
-									<li><a class="n-link-13" href="javascript:void(0)" value="Airdrop">Airdrop</a></li>
+									<li><a class="n-link-9" href="javascript:void(0)" value="TokenTb">Token</a></li>
+									<li><a class="n-link-13" href="javascript:void(0)" value="AirdropTb">Airdrop</a></li>
 
 									<!-- <li><a class="n-link-10 special_nav Textfadehome" href="javascript:void(0)" value="LmTb">LM</a>
 									</li>
