--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 <div>
 	<div class="modal fade" tabindex="-1" role="dialog" id="exampleModal">
 		<script>
-			const GOOGLE_ANALYTICS_USER_TRACKER_PROJECT_TOKEN = 'G-XKCWRHS6D2';
+			// const GOOGLE_ANALYTICS_USER_TRACKER_PROJECT_TOKEN = 'G-XKCWRHS6D2';
 			window.dataLayer = window.dataLayer || [];
 			function gtag() { dataLayer.push(arguments); }
 			gtag('js', new Date());
