Airdrop in scripts.js

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 									<!-- <li><a class="n-link-12 special_nav Textfadehome" href="javascript:void(0)" value="Team">Team</a>
 									</li> -->
 									<li><a class="n-link-9" href="javascript:void(0)" value="TokenTb">Token</a></li>
-									<li><a class="n-link-13" href="javascript:void(0)" value="AirdropTb">Airdrop</a></li>
+									<li><a class="n-link-Airdrop" href="javascript:void(0)" value="AirdropTb">Airdrop</a></li>
 
 									<!-- <li><a class="n-link-10 special_nav Textfadehome" href="javascript:void(0)" value="LmTb">LM</a>
 									</li>
@@ -825,7 +825,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 									<li><a class="n-link-8" href="javascript:void(0)" value="Chains">Chains</a></li>
 									<!-- <li><a class="n-link-12" href="javascript:void(0)" value="Team">Team</a></li> -->
 									<li><a class="n-link-9" href="javascript:void(0)" value="Token">Token</a></li>
-									<li><a class="n-link-13" href="javascript:void(0)" value="Airdrop">Airdrop</a></li>
+									<li><a class="n-link-Airdrop" href="javascript:void(0)" value="Airdrop">Airdrop</a></li>
 									<!-- <li><a class="n-link-10" href="javascript:void(0)" value="LM">LM</a></li>
 									<li><a class="n-link-11" href="javascript:void(0)" value="LGE">LGE</a></li> -->
 								</ul>
