--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<script src="js/mobile-chrome-vh-fix.js" type="text/javascript"></script>
 	<script src="js/jquery.waypoints.min.js" type="text/javascript"></script>
 	<script src="js/mobile-detect.min.js" type="text/javascript"></script>
-	<script src="js/scripts.js" type="text/javascript"></script>
+	<script src="js/scripts.js?v=1" type="text/javascript"></script>
 	<script src="js/mixpanel-config.js" type="text/javascript"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XKCWRHS6D2"></script>
 	<script src="js/google-analytics-config.js" type="text/javascript"></script>
