--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<ul>
 									<li><a class="n-link-0" href="javascript:void(0)" value="MetaverseTb">Metaverse</a></li>
 									<li><a class="n-link-1" href="javascript:void(0)" value="FetchTb">Fetch</a></li>
-									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunchTb">ROVCO Fair Launch</a></li>
+									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunchTb">Fair Launch</a></li>
 									<li><a class="n-link-3" href="javascript:void(0)" value="HouseTb">House</a></li>
 									<li><a class="n-link-4" href="javascript:void(0)" value="GibTb">Gib</a></li>
 									<li><a class="n-link-5" href="javascript:void(0)" value="FundsTb">Funds</a></li>
@@ -108,7 +108,7 @@
 									<li><a class="n-link-8" href="javascript:void(0)" value="ChainsTb">Chains</a></li>
 									<!-- <li><a class="n-link-12 special_nav Textfadehome" href="javascript:void(0)" value="Team">Team</a>
 									</li> -->
-									<li><a class="n-link-9" href="javascript:void(0)" value="TokenTb">Token</a></li>
+									<li><a class="n-link-9" href="javascript:void(0)" value="TokenTb">BSC Token</a></li>
 									<li><a class="n-link-Airdrop" href="javascript:void(0)" value="AirdropTb">Airdrop</a></li>
 
 									<!-- <li><a class="n-link-10 special_nav Textfadehome" href="javascript:void(0)" value="LmTb">LM</a>
@@ -185,7 +185,7 @@
 														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 15px">Bonus given on month 4</div>
 														<br>
 													</div>
-													
+
 													<div id="clock" class="newclasclock-builder-output">
 														<div class="clock-builder-output">														
 															<script type="text/javascript"
@@ -479,7 +479,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<div class="col-md-6 align-self-center text-white wow fadeInUp mt-md-0 mt-5">
 									<h1 class="wow fadeInUp"><span>ROVCO - Revenue Generating Fair Launch</span></h1>
 									<h3 class="wow fadeInUp">Earn from Every Transaction</h3>
-									<p class="wow fadeInUp">Rover's Rovflection tokenomics pays 5% to every holder and DEX Liquidity Depth (LD) from a 10% fee for every transaction</p>
+									<p class="wow fadeInUp">Rover's Rovflection tokenomics pays 5% to every holder and DEX Liquidity Depth (LD) from a 5% fee for every transaction</p>
 									<h3 class="wow fadeInUp">Less Slippage & Faster Liquidty Growth</h3>
 									<p class="wow fadeInUp">Buying RTR from Fetch reduces slippage while growing DEX LD 5x faster, via Rover's novel DEX/LGE split, while funding treasury</p>
 									<h3 class="wow fadeInUp">Liquidity Mining without Impermanent Loss</h3>
@@ -703,7 +703,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 					<div class="container">
 						<div class="row row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
-								<h1 class="wow fadeInUp"><span>Token</span></h1>
+								<h1 class="wow fadeInUp"><span>BSC Token</span></h1>
 								<h2 class="wow fadeInUp">Supply</h2>
 								<ul class="wow fadeInUp text-white  text-left">
 									<li>1Q - 50% burned</li>
@@ -820,7 +820,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<ul class="footer-menu-list wow fadeInUp">
 									<li><a class="n-link-0" href="javascript:void(0)" value="Metaverse">Metaverse</a></li>
 									<li><a class="n-link-1" href="javascript:void(0)" value="Fetch">Fetch</a></li>
-									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunch">ROVCO Fair Launch</a></li>
+									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunch">Fair Launch</a></li>
 									<li><a class="n-link-3" href="javascript:void(0)" value="House">House</a></li>
 									<li><a class="n-link-4" href="javascript:void(0)" value="Gib">Gib</a></li>
 									<li><a class="n-link-5" href="javascript:void(0)" value="Dao">Funds</a></li>
@@ -828,7 +828,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 									<li><a class="n-link-7" href="javascript:void(0)" value="NFT">NFT</a></li>
 									<li><a class="n-link-8" href="javascript:void(0)" value="Chains">Chains</a></li>
 									<!-- <li><a class="n-link-12" href="javascript:void(0)" value="Team">Team</a></li> -->
-									<li><a class="n-link-9" href="javascript:void(0)" value="Token">Token</a></li>
+									<li><a class="n-link-9" href="javascript:void(0)" value="Token">BSC Token</a></li>
 									<li><a class="n-link-Airdrop" href="javascript:void(0)" value="Airdrop">Airdrop</a></li>
 									<!-- <li><a class="n-link-10" href="javascript:void(0)" value="LM">LM</a></li>
 									<li><a class="n-link-11" href="javascript:void(0)" value="LGE">LGE</a></li> -->
