--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<ul>
 									<li><a class="n-link-0" href="javascript:void(0)" value="MetaverseTb">Metaverse</a></li>
 									<li><a class="n-link-1" href="javascript:void(0)" value="FetchTb">Fetch</a></li>
-									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunchTb">Fair Launch</a></li>
+									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunchTb">RGFL Fair Launch</a></li>
 									<li><a class="n-link-3" href="javascript:void(0)" value="HouseTb">House</a></li>
 									<li><a class="n-link-4" href="javascript:void(0)" value="GibTb">Gib</a></li>
 									<li><a class="n-link-5" href="javascript:void(0)" value="FundsTb">Funds</a></li>
@@ -244,7 +244,7 @@
 													RTR - Rover Tx Rewards every tx:<br>
 													5% goes to every holder wallet<br>
 													5% to rug-proof ownerless pool<br>
-													+5x liquidity growth with ROVCO<br>
+													+5x liquidity growth with RGFL<br>
 													Revenue from DeFi & NFT suite<br>
 													Stake without impermanent loss<br>												
 													Auto-compounding hodl APY<br>
@@ -477,7 +477,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 									<img src="images/Johnny.png" alt="" class=" wow fadeInLeft" />
 								</div>
 								<div class="col-md-6 align-self-center text-white wow fadeInUp mt-md-0 mt-5">
-									<h1 class="wow fadeInUp"><span>ROVCO - Revenue Generating Fair Launch</span></h1>
+									<h1 class="wow fadeInUp"><span>RGFL - Revenue Generating Fair Launch</span></h1>
 									<h3 class="wow fadeInUp">Earn from Every Transaction</h3>
 									<p class="wow fadeInUp">Rover's Rovflection tokenomics pays 5% to every holder and DEX Liquidity Depth (LD) from a 5% fee for every transaction</p>
 									<h3 class="wow fadeInUp">Less Slippage & Faster Liquidty Growth</h3>
@@ -820,7 +820,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<ul class="footer-menu-list wow fadeInUp">
 									<li><a class="n-link-0" href="javascript:void(0)" value="Metaverse">Metaverse</a></li>
 									<li><a class="n-link-1" href="javascript:void(0)" value="Fetch">Fetch</a></li>
-									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunch">Fair Launch</a></li>
+									<li><a class="n-link-2" href="javascript:void(0)" value="FairLaunch">RGFL Fair Launch</a></li>
 									<li><a class="n-link-3" href="javascript:void(0)" value="House">House</a></li>
 									<li><a class="n-link-4" href="javascript:void(0)" value="Gib">Gib</a></li>
 									<li><a class="n-link-5" href="javascript:void(0)" value="Dao">Funds</a></li>
